# chess-bot

./: .gitignore  CMakeLists.txt  magic.txt
assets/pieces/: README.MD
includes/: BitBoard.h  Bitboards.h  Board.h  BoardView.h
src/: BitBoard.cpp  Bitboards.cpp  Board.cpp  BoardView.cpp  main.cpp
